PassRate Filter alignment fix

--- a/src/features/security-profiles/components/PassRateFilter/PassRateFilter.module.scss
+++ b/src/features/security-profiles/components/PassRateFilter/PassRateFilter.module.scss
@@ -12,3 +12,19 @@
   justify-content: flex-end;
   padding-top: $spv--medium;
 }
+
+.inlineInput {
+  align-items: flex-end;
+  display: flex;
+  gap: 0.75rem;
+}
+
+.input {
+  width: 13rem;
+}
+
+.percent {
+  font-size: 1rem;
+  margin-bottom: 1.5rem;
+  width: 1rem;
+}
